Add full support for saving groups